--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
           accept-charset="UTF-8"
           autocomplete="off"
           spellcheck="false"
+          target="_blank"
         >
           <label for="name">Név</label>
           <input
